correction alignement header

--- a/public/scss/commons.scss
+++ b/public/scss/commons.scss
@@ -42,3 +42,7 @@
   justify-content: center;
   margin-bottom: 30px;
 }
+
+.user-logo {
+  margin: 34px 40px 0 0;
+}
